<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_fer1_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hazem@todo.todo">hazem</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>franka_moveit_config</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_plugins</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_planners_chomp</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_resources</depend>
  <depend>moveit_runtime</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_task_constructor_capabilities</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_demo</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_task_constructor_visualization</depend>
  <depend>moveit_resources_panda_moveit_config</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
